--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "This is Learning Namaste React",
   "scripts": {
+    "start": "parcel index.html",
     "test": "jest"
   },
   "author": "Harsh Jain",
